EC2-CFN-init-signal.yaml
### Install httpd and launch a web server in EC2 using CFN Init. Wait for cfn init to complete using CFN signal
### Uses Default VPC and Subnets

Resources:
  cfnDemoEc2:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: ami-0440d3b780d96b29d
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref cfnDemoSecurityGroup
      UserData: 
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            yum update -y aws-cfn-bootstrap
            /opt/aws/bin/cfn-init -s ${AWS::StackId} -r cfnDemoEc2 --region ${AWS::Region}
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource cfnDemoWaitCondition --region ${AWS::Region}
    Metadata:
      Comment: Install httpd with cfn init
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd: []
          files:
            "/var/www/html/index.html":
              content: |
                <h1>Server launched using cfn init</h1>
              mode: '000644'
          services:
            sysvinit:
              httpd:
                enabled: 'true'
                ensureRunning: 'true'

  cfnDemoWaitCondition:
    CreationPolicy:
      ResourceSignal:
        Timeout: PT2M
        Count: 1
    Type: AWS::CloudFormation::WaitCondition    

  cfnDemoSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: cfnDemoSecurityGroup
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      Tags:
        - Key: name
          Value: cfnDemoSecurityGroup
